Deprecation 문제 해결.